tests/invalid/runtime/string_substring_oob.pts
function main() : void {
    string s = "abc";
    string t = s.substring(2, 2);
    Sys.print(t);
}
